Update multiple langauges

--- a/application/customer-site/src/assets/i18n/vi.json
+++ b/application/customer-site/src/assets/i18n/vi.json
@@ -1,10 +1,10 @@
 {
-  "topbar-title": "Welcome to Our store Multikart",
-  "call-us": "Call Us",
+  "topbar-title": "Xin chào bạn đã đến với Cửa Hàng Hạt Điều Minh Thiên",
+  "call-us": "Liên hệ chúng tôi",
   "home": "Trang chủ",
   "shop": "Cửa hàng",
   "products": "Sản phẩm",
-  "features": "Features",
+  "features": "Tính năng",
   "new": "New",
   "pages": "Pages",
   "blogs": "Blogs",
